# HoloMotion

./: .gitignore  README.md  ROLLOUT_PERFORMANCE_GUIDE.md  env_cfg.json  environment_train_isaaclab.yaml  hololab_env_cfg.json  isaaclab_env_cfg.yaml  multi_user_gpu_strategy.py  native_bydmmc_env.yaml  performance_analysis_report.txt  pyproject.toml  quick_performance_check.py  rollout_optimizer.py  rollout_profiler.py  test_remove_yaw.py  tmp_notes.txt  train_isaaclab.env
docs/: evaluate_motion_tracking.md  motion_retargeting.md
examples/: motion_lib_weighted_sampling_example.py
holomotion/config/algo/: dagger.yaml  dagger_mlp.yaml  dagger_transformer.yaml  ppo.yaml  ppo_beyondmimic.yaml  ppo_isaaclab.yaml  ppo_v2.yaml  ppo_v3.yaml
holomotion/config/data_curation/: amass_dance.yaml  holomotion_full_filtered.yaml
holomotion/config/env/: motion_tracking.yaml  motion_tracking_isaaclab.yaml
holomotion/config/env/domain_randomization/: NO_domain_rand.yaml  domain_rand_base.yaml  domain_rand_beyondmimic.yaml  domain_rand_lite.yaml  domain_rand_v2.yaml
holomotion/config/env/terminations/: isaaclab_termination_bydmmc.yaml
holomotion/config/env/terrain/: isaaclab_plane.yaml
holomotion/config/evaluation/: eval_isaacgym.yaml  eval_isaacgym_with_dr.yaml  eval_isaaclab.yaml
holomotion/config/motion_retargeting/: filter_config.yaml  unitree_G1_23dof_mujoco_viz_config.yaml  unitree_G1_23dof_retargeting_v0.yaml  unitree_G1_23dof_shape_fitting_config.yaml  unitree_G1_29dof_retargeting.yaml
holomotion/config/simulator/: isaaclab.yaml
holomotion/config/training/: pack_lmdb_database.yaml
holomotion/config/training/motion_tracking/: train_g1_23dof_beyondmimic.yaml  train_g1_23dof_isaaclab.yaml  (+104 more)
holomotion/examples/: async_motion_training_example.py
holomotion/scripts/evaluation/: eval_motion_tracking_isaacgym.sh  eval_motion_tracking_isaaclab.sh  eval_per_motion_pipeline.sh
holomotion/scripts/misc/: add_padding_normalize_rot_trans_combine_clips.py  dof23_to_lafan.py  export_single_motion.sh  lafan_to_23dof.py  lafan_to_29dof.py  remove_global_translation.py  reverse_motions.py  slice_retargeted_motion.py
holomotion/scripts/motion_retargeting/: run_btws_filter.sh  run_motion_retargeting_phc.sh  run_motion_viz_mujoco.sh  run_robot_smpl_shape_fitting.sh
holomotion/scripts/training/: pack_lmdb_database.sh  train_motion_tracking_isaaclab.sh  train_motion_tracking_isaaclab_rsl_rl.sh  train_motion_tracking_student.sh  train_motion_tracking_teacher.sh
holomotion/src/algo/: ppo.py  ppo_isaaclab.py  ppo_isaaclab_legacy.py  ppo_rsl_rl_style.py
holomotion/src/env/: env_base.py  motion_tracking.py  motion_tracking_isaaclab.py  motion_tracking_isaaclab_new.py
holomotion/src/evaluation/: eval_motion_tracking.py  eval_motion_tracking_isaaclab.py  eval_motion_tracking_per_motionv2_memoryfix.py  eval_motion_tracking_per_motionv4_gymvd.py  sort_per_motion_by_mpjpe.py
holomotion/src/modules/: agent_modules.py  network_modules.py
holomotion/src/simulator/: isaacgym.py  isaaclab.py
holomotion/src/training/: async_motion_prefetcher.py  enhanced_motion_cache.py  lmdb_motion_lib.py  pack_lmdb.py  train_motion_tracking.py  train_motion_tracking_isaaclab.py  train_motion_tracking_isaaclab_rsl_rl.py
holomotion/src/utils/: config.py  torch_utils.py
holomotion/whole_body_tracking/scripts/: csv_to_npz.py  replay_npz.py
requirements/: requirements_train.txt  requirements_train_isaaclab.txt
runs/rsl_rl_20250925_132429/: events.out.tfevents.1758777889.champion.3884880.0
(+83 files in other folders)
